# chip8-wasm

./: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  index.html  package.json  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
assets/: chip8_emulator_bg-2fcb6b1d.wasm  index-985d456f.js  index-dd915306.css
emulator/: Cargo.toml
emulator/src/: chip8.rs  lib.rs  opcodes.rs
emulator/src/components/: keypad.rs  memory.rs  opcodes.rs  processor.rs  screen.rs
src/: fasterInterval.js  main.ts
