[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
array-init = "2.1.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
  'Document',
  'Element',
  'HtmlElement',
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  'Node',
  'Window',
  "console"
]}

[features]
default = []
